grammar.txt
Current grammar

chunk ::= block

block ::= stat_list

stat_list ::= stat stat_list
            | empty

stat ::= ';'
       | varlist '=' explist
       | RETURN
       | RETURN exp
       | RETURN ';'
       | RETURN exp ';'

varlist ::= var
          | var ',' varlist

explist ::= exp
          | exp ',' explist

exp ::= exp PLUS exp
      | exp MINUS exp
      | exp TIMES exp
      | exp DIVIDE exp
      | '(' exp ')'
      | unop exp
      | var
      | NUMBER

var ::= IDENTIFIER

empty ::=
